--- a/wp-content/themes/egg/.gitignore
+++ b/wp-content/themes/egg/.gitignore
@@ -18,7 +18,7 @@
 
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
-#wp-content/*
+wp-content/uploads/
 #wp-content/themes/.DS_Store
 #!wp-content/plugins/
 #!wp-content/themes/
