--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,9 @@
 # content. Or see git's documentation for more info on .gitignore files:
 # http://kernel.org/pub/software/scm/git/docs/gitignore.html
 
-# Ignore everything in the root except the "wp-content" directory.
-#/*
-#!.gitignore
-#!wp-content/
-
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
-wp-content/uploads/
-wp-content/backupwordpress-8d0171916a-backups/
-#wp-content/themes/.DS_Store
-#!wp-content/plugins/
-#!wp-content/themes/
+wp-content/*
+!wp-content/plugins/
+!wp-content/themes/
+!wp-content/languages/
