--- a/.htaccess
+++ b/.htaccess
@@ -231,6 +231,9 @@
 		RewriteRule ^wp-includes/js/tinymce/langs/.+\.php - [F]
 		RewriteRule ^wp-includes/theme-compat/ - [F]
 
+		# Disable PHP in Uploads - Security > Settings > System Tweaks > PHP in Uploads
+		RewriteRule ^wp\-content/uploads/.*\.(?:php[1-7]?|pht|phtml?|phps)$ - [NC,F]
+
 		# Filter Request Methods - Security > Settings > System Tweaks > Request Methods
 		RewriteCond %{REQUEST_METHOD} ^(TRACE|DELETE|TRACK) [NC]
 		RewriteRule ^.* - [F]
